fix styles for score in dark mode

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -57,6 +57,8 @@ table {
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
+  --color-bg-score: white;
+  --color-text-score:#242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -106,6 +108,8 @@ button:hover {
   :root {
     color: #213547;
     background-color: #ffffff;
+    --color-bg-score: white;
+    --color-text-score:#242424;
   }
   a:hover {
     color: #747bff;
@@ -113,4 +117,10 @@ button:hover {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.scoreDiv {
+  background-color: var(--color-bg-score);
+  color: var(--color-text-score);
+  padding: 0.3rem;
 }
